# setlist_and_stem_organiser

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: config.py
src/setlist_organiser/: classifier.py  cli.py  config.py  models.py  organiser.py  planner.py  reviewer.py  session_builder.py  webapp.py
src/setlist_organiser/static/: styles.css
src/setlist_organiser/templates/: index.html
tests/: test_classifier.py  test_cli.py  test_config.py  test_organiser.py  test_planner.py  test_reviewer.py  test_webapp.py
